[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# limit which files are included in the sdist (.tar.gz) asset,
include = [
    '/README.md',
    '/checkr',
    '/tests'
]

[project]
name = 'checkr'
description = 'Data validation made easy'
authors = [
    { name = 'Ilyes Chouia', email = 'ilyes.chouia@outlook.com' }
]
license = 'MIT'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]
requires-python = '>=3.7'
dependencies = [
    'pytest>=7.2.2',
    'requests>=2.28.2',
    'ulid-py>=1.1.0',
    'validators>=0.20.0',
]
version = "0.1.1"
dynamic = ["readme"]


[project.urls]
Homepage = 'https://github.com/celyes/checkr'
Documentation = 'https://github.com/celyes/checkr'
Funding = 'https://github.com/sponsors/samuelcolvin'
Source = 'https://github.com/celyes/checkr'


[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and HISTORY.md
fragments = [
    { path = "README.md" }
]


[tool.pytest.ini_options]
testpaths = 'tests'
xfail_strict = true
filterwarnings = [
    'error',
    'ignore:path is deprecated.*:DeprecationWarning:',
]


[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 14 }
isort = { known-first-party = ['pydantic', 'tests'] }
target-version = "py37"

[tool.ruff.per-file-ignores]
'checkr/__init__.py' = ['F405', 'F403']
'tests/test_forward_ref.py' = ['F821']


[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true


